test/sema/too-many-arguments.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func sum(a: int, b: int) -> int { return a + b; }

// CHECK: [[@LINE+1]]:25: error: too many arguments to 'sum', expected 2
func main() { var foo = sum(1, 2, 3); }
